--- a/Kori/LanguageSelector.razor.scss
+++ b/Kori/LanguageSelector.razor.scss
@@ -1,6 +1,48 @@
 .login-component__language {
     padding-bottom: 8px;
 
+    .login-component__language-btn {
+        width: 100%;
+        display: flex !important;
+        justify-content: space-between !important;
+        align-items: center !important;
+        padding: 8px 0 !important;
+        background: none !important;
+        border: none !important;
+        font-family: 'Encode Sans Expanded' !important;
+        font-size: 14px !important;
+        font-weight: 400 !important;
+        line-height: 140% !important;
+        text-align: left !important;
+        color: white !important;
+        cursor: pointer;
+
+        @extend .login-component__text-btn;
+
+        &-content {
+            display: flex !important;
+            align-items: center !important;
+            gap: 14px !important;
+            font-family: 'Encode Sans Expanded' !important;
+            font-size: 14px !important;
+            font-weight: 400 !important;
+            line-height: 140% !important;
+            color: white !important;
+            opacity: 0.7 !important;
+        }
+
+        .login-component__expand-icon {
+            width: 16px;
+            height: 16px;
+            transition: transform 1000ms ease-in-out;
+            opacity: 0.7;
+
+            &.rotate {
+                transform: rotate(-180deg);
+            }
+        }
+    }
+
     .login-component__language-list {
         display: flex;
         flex-direction: column;
@@ -40,6 +82,25 @@
                 color: var(--grey-300) !important;
             }
         }
+    }
+}
+
+.login-component__text-btn {
+    font-family: 'Encode Sans Expanded' !important;
+    font-size: 14px !important;
+    font-weight: 400 !important;
+    line-height: 140% !important;
+    color: white !important;
+    cursor: pointer !important;
+    transition: 300ms ease-in-out !important;
+    opacity: 0.7 !important;
+
+    &:hover {
+        opacity: 1 !important;
+    }
+
+    &:active {
+        opacity: 0.7 !important;
     }
 }
 
