Implement UI enhancements and structure updates:
- Create Top Bar component.
- Add Top bar in KoriContent.
- Add new folder structure for modes, including files for each mode.
- Create new methods in Kori class to 'activate' the Mode

--- a/Kori/KoriWidget.razor
+++ b/Kori/KoriWidget.razor
@@ -20,7 +20,7 @@
                     <button class="options__edit kori__btn" @onclick=Kori.EditAsync>Edit Content</button>
                     <button class="options__translation kori__btn" @onclick=Kori.OpenTranslationMenu>Translation</button>
                     <button class="options__ab kori__btn">A/B Testing</button>
-                    <button class="options__search kori__btn" @onclick=Kori.OpenSearchMenu>Search</button>
+                    <button class="options__search kori__btn" @onclick=Kori.OpenSearchMenuAsync>Search</button>
                 </div>
             </div>
         }
