--- a/Kori/KoriContent.razor
+++ b/Kori/KoriContent.razor
@@ -4,6 +4,7 @@
 </section>
 
 <Kori.KoriLogin />
+<Kori.KoriTopBar />
 <Kori.KoriWidget />
 
 @inject Kori Kori
@@ -20,15 +21,9 @@
             
             await Kori.InitializeAsync(this, Nav.Uri, _id);
             Nav.LocationChanged += async (sender, args) => await Kori.InitializeAsync(this, args.Location, _id);
-            // StateHasChanged();
+            StateHasChanged();
         }
     }
-
-    // [JSInvokable]
-    // public async Task<List<string>> TranslateAsync(List<string> content)
-    // {
-    //     return await Kori.TranslateAsync(content);
-    // }
 
     [JSInvokable]
     public async Task<Dictionary<string, string>> TranslateAsync(Dictionary<string, string> content)
