--- a/Kori/KoriTopBar.razor.css
+++ b/Kori/KoriTopBar.razor.css
@@ -8,6 +8,7 @@
   flex-direction: column;
   z-index: 1000;
   background: var(--white);
+  cursor: default;
 }
 .kori-top-bar.show {
   display: flex;
@@ -50,7 +51,7 @@
   display: none;
 }
 .kori-top-bar .top-bar-buttons .top-bar-button:hover {
-  background-color: #EEF2FA;
+  background: #EEF2FA;
   box-shadow: inset 0 0 0 4px #FFFFFF;
 }
 .kori-top-bar .top-bar-buttons .top-bar-button:hover .normal-icon {
@@ -67,8 +68,8 @@
   box-shadow: inset 0 0 0 4px #FFFFFF;
 }
 .kori-top-bar .top-bar-buttons .top-bar-button.selected {
-  background-color: #EEF2FA;
-  transition: background-color 0.3s ease;
+  background: #EEF2FA;
+  transition: background 0.3s ease;
   box-shadow: inset 0 0 0 4px #FFFFFF;
 }
 .kori-top-bar .top-bar-buttons .top-bar-button.selected .normal-icon {
@@ -87,10 +88,11 @@
   height: 60px;
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.04), 0px 0px 2px 0px rgba(0, 0, 0, 0.06), 0px 0px 1px 0px rgba(0, 0, 0, 0.04);
 }
-.kori-top-bar .bottom-bar Kori_Logo Component instance .logo {
+.kori-top-bar .bottom-bar .logo {
   margin-right: auto;
+  display: flex;
 }
-.kori-top-bar .bottom-bar Kori_Logo Component instance .logo img {
+.kori-top-bar .bottom-bar .logo img {
   width: 60px;
   height: 27px;
 }
