--- a/Kori/KoriTopBar.razor.scss
+++ b/Kori/KoriTopBar.razor.scss
@@ -8,6 +8,7 @@
     flex-direction: column;
     z-index: 1000;
     background: var(--white);
+    cursor: default;
 
     &.show {
         display: flex;
@@ -55,7 +56,7 @@
             }
 
             &:hover {
-                background-color: #EEF2FA;
+                background: #EEF2FA;
                 box-shadow: inset 0 0 0 4px #FFFFFF;
 
                 .normal-icon {
@@ -77,8 +78,8 @@
             }
 
             &.selected {
-                background-color: #EEF2FA;
-                transition: background-color 0.3s ease;
+                background: #EEF2FA;
+                transition: background 0.3s ease;
                 box-shadow: inset 0 0 0 4px #FFFFFF;
 
                 .normal-icon {
@@ -103,8 +104,9 @@
         height: 60px;
         box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.04), 0px 0px 2px 0px rgba(0, 0, 0, 0.06), 0px 0px 1px 0px rgba(0, 0, 0, 0.04);
 
-        Kori_Logo Component instance .logo {
-            margin-right: auto;
+        .logo {
+            margin-right: auto; 
+            display: flex;
 
             img {
                 width: 60px;
