--- a/Kori/KoriContent.razor.scss
+++ b/Kori/KoriContent.razor.scss
@@ -26,4 +26,20 @@
     }
 }
 
+.mode-search {
+    border: 5px solid blue;
+}
+
+.mode-translate {
+    border: 5px solid green;
+}
+
+.mode-blog {
+    border: 5px solid red;
+}
+
+.mode-abtesting {
+    border: 5px solid purple;
+}
+
 
