--- a/Kori/Modes/SearchMode.razor
+++ b/Kori/Modes/SearchMode.razor
@@ -2,7 +2,10 @@
     <div class="kori-search__header">
         <div class="kori-search__title">
             <h5>Navigation</h5>
-            <img src="/_content/Kori/icons/Close.svg" alt="Close" class="close-icon" @onclick="Kori.CancelAsync" />
+            <button class="close-icon" @onclick="Kori.CancelAsync">
+                <img src="/_content/Kori/icons/Close.svg" alt="Close" />
+            </button>
+            
         </div>
         <div class="kori-search__searchbar">
             <img src="/_content/Kori/icons/Search2.svg" />
