--- a/Kori/Modes/SearchMode.razor.scss
+++ b/Kori/Modes/SearchMode.razor.scss
@@ -32,6 +32,11 @@
                 font-size: 14px;
                 color: #1F232B;
             }
+
+            .close-icon {
+                background: transparent;
+                padding: 0;
+            }
         }
 
         .kori-search__searchbar {
